# GTQN

./: Dockerfile  README.md  pyproject.toml  requirements.txt
GTQN_sumo_assets_corridors/SQ1_like/: HOWTO_BUILD_NET.txt  SQ1_like.edg.xml  SQ1_like.nod.xml  SQ1_like.rou.xml  build_net.sh  corridor.json  sim.sumocfg  tls_ids.json
GTQN_sumo_assets_corridors/SQ2_like/: HOWTO_BUILD_NET.txt  SQ2_like.edg.xml  SQ2_like.nod.xml  SQ2_like.rou.xml  corridor.json  sim.sumocfg  tls_ids.json
GTQN_sumo_assets_corridors/SQ3_like/: HOWTO_BUILD_NET.txt  SQ3_like.edg.xml  SQ3_like.nod.xml  SQ3_like.rou.xml  corridor.json  sim.sumocfg  tls_ids.json
docs/: ablations.md  paper_mapping.md
gtqn/: __init__.py
gtqn/configs/: default.yaml
gtqn/configs/ablations/: attention_dense.yaml  attention_random.yaml  attention_soft_only.yaml  attention_topk_only.yaml  no_cgg.yaml  reward_global_only.yaml  reward_local_only.yaml  reward_weighted_alpha05.yaml
gtqn/envs/: __init__.py  demand_generator.py  obs_builder.py  sumo_env.py
gtqn/envs/networks/: README.md
gtqn/models/: __init__.py  cgg.py  djc.py  gtqn_system.py  modules.py  qmix.py  sparse_coord.py
gtqn/rl/: replay_buffer.py  schedules.py  trainer.py
gtqn/utils/: checkpoint.py  logger.py  metrics.py  seed.py
scripts/: eval.py  make_routes.py  train.py
