[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtqn"
version = "0.1.0"
description = "Graph Transformer Q-Network (GTQN) reference implementation for multi-intersection traffic signal control"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.setuptools.packages.find]
include = ["gtqn*"]
